--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "construcciones-h-londono",
   "version": "1.0.0",
-  "description": "Mi primer web con sass",
-  "main": "index.js",
+  "description": "",
+    "node-sass": "^7.0.3",
+    "nodemon": "^2.0.20",
+  
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "node-sass --include-path scss scss/estilo.scss css/main.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
+
   },
   "repository": {
     "type": "git",
@@ -15,14 +19,10 @@
   "keywords": [
     "developer"
   ],
-  "author": "Jose Manuel",
+  "author": "jose manuel",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Joselito17821/PreEntrega3-Londono/issues"
   },
-  "homepage": "https://github.com/Joselito17821/PreEntrega3-Londono#readme",
-  "devDependencies": {
-    "node-sass": "^7.0.3",
-    "nodemon": "^2.0.20"
-  }
+  "homepage": "https://github.com/Joselito17821/PreEntrega3-Londono#readme"
 }
